--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -2,7 +2,7 @@ base_config:
    file: .expeditor/base_config.yml
 
  release_branches:
-   - master
+   - main
    
 subscriptions:
   - workload: pull_request_merged:{{github_repo}}:{{release_branch}}:*
