--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -4,4 +4,5 @@ release_branches:
 subscriptions:
   - workload: pull_request_merged:{{github_repo}}:{{release_branch}}:*
     actions:
-      - bash:.expeditor/noop.sh
+      - built_in:bump_version
+    pull_request: true
