--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -1,6 +1,9 @@
 release_branches:
   - main
-
+  
+slack:
+  notify_channel:
+    - expeditor-testing
    
 subscriptions:
   - workload: pull_request_merged:{{github_repo}}:{{release_branch}}:*
