--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -13,4 +13,4 @@ subscriptions:
     pull_request: 
       title: "{{title}}"
       description: .expeditor/template.mustache
-      branch: my-cool-branch
+      branch: "{{event}}:{{name}}/"
