--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -16,5 +16,6 @@ subscriptions:
   - workload: pull_request_opened:{{github_repo}}:{{release_branch}}:*
     actions:
       - bash:.expeditor/noop.sh:
+	  cwd: .expeditor/
           ignore_labels:
             - "Custom Label"
