--- a/.expeditor/config.yml
+++ b/.expeditor/config.yml
@@ -15,4 +15,4 @@ subscriptions:
       description: .expeditor/template.mustache
   - workload: pull_request_opened:{{github_repo}}:{{release_branch}}:*
     actions:
-      - bash:.expeditor/noop.sh:
+      - bash:.expeditor/noop.sh
